# print-test

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  requirements.txt
backend/app/api/: routes.py
backend/app/api/endpoints/: books.py  headlines.py
backend/app/core/: config.py  logging.py
backend/app/models/: book.py  hn_item.py
backend/app/scrapping/: scrape_books.py  scrape_hn.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test_redis.py  test_selenium.py
backend/app/tests/unit/api/: test_books.py  test_headlines.py
backend/app/tests/unit/scrapping/: test_scrape_books.py  test_scrape_hn.py
backend/app/utils/: redis_utils.py
data/: credentials.json  workflow.json
frontend/: .env.template  Dockerfile  Dockerfile.dev  package.json  pnpm-lock.yaml
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/api/chat/: +server.ts
