[tool.poetry]
name = "fastapi-books-news"
packages = [
    { include = "app" },
]
version = "0.1.0"
description = "FastAPI application for scraping books and Hacker News"
authors = ["Isidro Zertucha <isidro.zertucha@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
redis = "^5.0.2"
pydantic = "^2.6.3"
httpx = "^0.27.0"
pytest = "^8.0.1"
flake8 = "^7.0.0"
tenacity = "^9.1.2"
selenium = "^4.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
httpx = "^0.27.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"